cabal-version: 2.0
name: ilpsched
version: 1.0.0
license: BSD3
maintainer: fre@freux.fr
author: Valentin Reis
synopsis: ilp scheduling
description: scheduling via mixed integer linprog
category: algorithms
build-type: Simple

source-repository head

library
    exposed-modules:
        Sched
        Example
        Algebra.Classes
        Data.LinearProgram
        Data.LinearProgram.Common
        Data.LinearProgram.GLPK
        Data.LinearProgram.GLPK.Common
        Data.LinearProgram.GLPK.Internal
        Data.LinearProgram.GLPK.IO.Internal
        Data.LinearProgram.GLPK.IO
        Data.LinearProgram.GLPK.Solver
        Data.LinearProgram.GLPK.Types
        Data.LinearProgram.LinExpr
        Data.LinearProgram.Spec
        Data.LinearProgram.Types
        Control.Monad.LPMonad.Internal
        Control.Monad.LPMonad.Supply.Class
        Control.Monad.LPMonad.Supply
        Control.Monad.LPMonad
    hs-source-dirs: src
    extra-libraries: glpk
    c-sources: glpk/glpk.c
    default-language: Haskell2010
    default-extensions: LambdaCase QuasiQuotes DefaultSignatures
                        ExistentialQuantification RecordWildCards TypeSynonymInstances
                        StandaloneDeriving FlexibleInstances TupleSections
                        MultiParamTypeClasses NoImplicitPrelude OverloadedStrings
                        ViewPatterns OverloadedLabels DeriveFunctor
                        TypeFamilies DeriveAnyClass DeriveGeneric DeriveDataTypeable
                        DeriveFoldable DerivingStrategies TypeApplications MultiWayIf
                        TemplateHaskell BlockArguments GADTs FlexibleContexts TypeOperators
                        DataKinds PolyKinds AllowAmbiguousTypes FunctionalDependencies
                        UndecidableInstances
    ghc-options: -Wall -O0 -Wcompat -Wincomplete-uni-patterns
                 -Widentities -Wredundant-constraints -Wcpp-undef -fwarn-tabs
                 -fwarn-unused-imports -fwarn-missing-signatures
                 -fwarn-name-shadowing -fprint-potential-instances
                 -fwarn-unused-do-bind -fwarn-wrong-do-bind
                 -fwarn-incomplete-patterns -Wincomplete-record-updates
                 -Wmonomorphism-restriction -Wimplicit-prelude
                 -Wmissing-local-signatures -Wmissing-exported-signatures
                 -Wmissing-export-lists -Wmissing-home-modules -Widentities
                 -Wredundant-constraints -Wpartial-fields
    build-depends:
        base -any,
        containers,
        binary,
        pretty-simple,
        protolude,
        fgl,
        transformers,
        graphviz,
        Chart,
        data-default,
        Chart-cairo,
        gnuplot,
        lens,
        colour,
        mtl

executable example-ilpsched
  main-is:          bin/Main.hs
  build-depends:    base, ilpsched
  ghc-options:      -O2 -Wall -threaded
  default-language: Haskell2010
